--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <section>
                     <h3>Phase 2: Mastering Computational & Data Science</h3>
                     <ul>
-                        <li class="fragment">Postdoctoral training in applying ML/DL to neuroimaging (MRI) and electrophysiological (EEG/MEG) data.</li>
-                        <li class="fragment">Expertise in complex clinical data analysis, including network meta-analysis and survival analysis on large databases (NIS, NSQIP).</li>
+                        <li class="fragment">Research Fellowship in applying ML/DL to neuroimaging (MRI) and electrophysiological (EEG/MEG) data.</li>
+                        <li class="fragment">Expertise in complex data analysis, biostatistics and computational methods.</li>
                         <li class="fragment">Developed and published open-source R packages for clinical database extraction and analysis.</li>
                     </ul>
                      <aside class="notes">
@@ -121,13 +121,13 @@
                     <h3>Milestone: The Long COVID Study</h3>
                     <p>My first major project as <strong>Principal Investigator</strong>.</p>
                     <ul>
-                        <li class="fragment">Initiated and led a multicentric international collaboration.</li>
+                        <li class="fragment">Initiated and led multicentric international collaborations.</li>
                         <li class="fragment">Coordinated <strong>100+ researchers</strong> across <strong>20 countries</strong>, studying over <strong>2,400 patients</strong>.</li>
                         <li class="fragment">Developed a deep learning model and deployed a public <strong>ML-powered risk calculator</strong>.</li>
                     </ul>
                     <p class="fragment"><a href="https://ahmedshaheen.shinyapps.io/shaheen-covid/" target="_blank">View the Long COVID Risk Predictor</a></p>
                     <aside class="notes">
-                        A defining aspect of my research path has been leading and collaborating on large-scale projects. I initiated and spearheaded this significant international collaboration during the COVID-19 pandemic. This experience honed my skills in project management, data coordination, and collaborative science.
+                        A defining aspect of my research path has been managing and collaborating on large-scale projects. I initiated and spearheaded this significant international collaboration during the COVID-19 pandemic. This experience honed my skills in project management, data coordination, and collaborative science.
                     </aside>
                 </section>
 
@@ -137,7 +137,7 @@
                     <ul>
                         <li class="fragment">Leading the **Shaheen Clinic Research Group** and serving in leadership roles in global consortia.</li>
                         <li class="fragment">Developing novel LLM-based frameworks to **automate systematic reviews** and clinical trial analysis.</li>
-                        <li class="fragment">Building practical tools: Deep Learning MRI segmentation tools, AI web applications, and R/Python packages.</li>
+                        <li class="fragment">Building practical tools: Deep Learning MRI segmentation tools, BioMedical Pathway Engine, and R/Python packages.</li>
                     </ul>
                     <aside class="notes">
                         My commitment to contributing to the scientific community is reflected in my extensive publication record of over 60+ works and an H-index of 15. I actively engage in peer review and hold editorial positions, giving me insight into the publication process. I also enjoy translating complex methods into practical tools, developing open-source packages and AI applications for researchers.
@@ -171,10 +171,10 @@
                         </aside>
                     </section>
                     <section>
-                        <h4>Principal Investigator: Large-Scale Deep Learning Study</h4>
+                        <h4>First Author & Project Coordination: Large-Scale Deep Learning Study</h4>
                         <p class="paper-title">Deep learning analysis of long COVID and vaccine impact... development of a risk calculator in a multicentric study</p>
                         <ul>
-                            <li><strong>My Role:</strong> First Author & Principal Investigator.</li>
+                            <li><strong>My Role:</strong> First Author & Project Coordination.</li>
                             <li><strong>Skills Demonstrated:</strong> Research leadership, multicentric study coordination, deep learning model development, and creating a clinical risk calculator.</li>
                             <li><strong>Publication:</strong> Frontiers in Public Health</li>
                         </ul>
@@ -183,7 +183,7 @@
                         <h4>Cutting-Edge AI: LLMs for Automated Research</h4>
                         <p class="paper-title">Application of a general LLM-based classification system to retrieve information about oncological trials</p>
                         <ul>
-                            <li><strong>My Role:</strong> Co-author on a pioneering international team.</li>
+                            <li><strong>My Role:</strong> Co-author.</li>
                             <li><strong>Skills Demonstrated:</strong> Large Language Model (LLM) framework development, Natural Language Processing (NLP), and automated text classification for research.</li>
                             <li><strong>Publication:</strong> medRxiv (Preprint)</li>
                         </ul>
@@ -192,7 +192,7 @@
                         <h4>Advanced Meta-Analysis in Neuroscience</h4>
                         <p class="paper-title">Non-Invasive Brain Stimulation Improves Word Retrieval Deficits in Parkinson's Disease: A Meta Analysis of Clinical Trials</p>
                         <ul>
-                            <li><strong>My Role:</strong> Co-author, leading the statistical analysis and methodology.</li>
+                            <li><strong>My Role:</strong> Co-author, managing study conduct, the statistical analysis and methodology.</li>
                             <li><strong>Skills Demonstrated:</strong> Systematic review, advanced meta-analysis, and research in neurodegenerative diseases (Parkinson's).</li>
                             <li><strong>Publication:</strong> Preprint / In Submission</li>
                         </ul>
@@ -217,14 +217,7 @@
                     </section>
                 </section>
                 
-                <!-- Slide 10: The Vision -->
-                <section>
-                    <h2>The Vision: Project Alpha & Agentic AI</h2>
-                    <p>My forward-looking work centers on a new paradigm for scientific discovery.</p>
-                    <blockquote>"Building a new technology that enables the next generation of app development with AI... making AI live in a free virtual environment and being able to evolve, learn, etc."</blockquote>
-                    <p class="fragment">The goal is not just to use AI, but to create intelligent, autonomous systems that accelerate science itself.</p>
-                    <p class="fragment"><a href="https://doctor-shaheen.github.io/agentic.flask.ai/" target="_blank">Learn more about Project Alpha</a></p>
-                </section>
+          
 
                 <!-- Slide 11: Core Skills -->
 				<section>
@@ -254,7 +247,7 @@
                            <h4>Leadership & Entrepreneurship</h4>
                             <ul>
                                 <li>Founder & CEO, Shaheen Clinic LLC</li>
-                                <li>Research Leadership (PI)</li>
+                                <li>Research Leadership & Management</li>
                                 <li>Large-Scale Collaboration</li>
                                 <li>Scientific Writing & Editing</li>
                                 <li>Teaching & Mentorship</li>
